--- a/src/app/directo/directo.page.html
+++ b/src/app/directo/directo.page.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper ">
       
-      <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
+      <div class="wrapper-inline">
           <app-menu></app-menu>
           <app-quickmenu title="{{title}}"></app-quickmenu>
         <!-- Page content start -->
@@ -15,20 +15,16 @@
               </div>
             </div>
    -->
-            <section class="bal-section container">
-                <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div><br>
-             
-           
-            </section>
+          
          
           
-            <section class="bal-section container">
+            <section class="container">
                 <div style="margin:auto" align="center"> <img src="assets/img/phone.jpg" alt=""></div><br>
              
            
             </section>
           
-            <section class="bal-section container">
+            <section class=" container">
                 <div class="form-row"  align="center">
     
                     <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);" (click)="llamar()"  class="button circle inline block">Llamar</a>
@@ -37,7 +33,7 @@
            
             </section>
          
-            <section  class="bal-section container">
+            <section  class=" container">
                 <div style="text-align: center !important;">
     
                     <h3 style="color: black;text-decoration: bold">(55) 5363 6140</h3>
