--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,3 +1,12 @@
+
+  <div class="form-divider"></div>
+  <section class="container">
+      <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
+   
+ 
+  </section>
+  <div class="form-divider"></div>
+
 <div class="popup-overlay" id="incumplePopup"> <!-- if you dont want overlay add class .no-overlay -->
   <div class="popup-container">
     <div class="popup-header">
