--- a/src/app/members/alertas/alertas.page.html
+++ b/src/app/members/alertas/alertas.page.html
@@ -3,19 +3,15 @@
   <div class="wrapper ">
       
     <div class="wrapper-inline" >
-        <app-membersmenu></app-membersmenu>
+      <!-- <app-membersmenu></app-membersmenu> -->
+      <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
       <main class="margin mt-0">
 
         
 
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-           
-         
-          </section>
-          <br>
+        
           <section class="container text-left"  >
            
                 
@@ -66,11 +62,11 @@
               </div>
            
           </div>
-        </section>
+          </section>
 
-          <section class="container">
+          <!-- <section class="container">
               <div class="content"> 
-                <!-- <h4 class="title-main">Balance Split</h4> -->
+                 <h4 class="title-main">Balance Split</h4> 
               <div class="c-panel">
                 
                   <div class="form-row"  style="text-align: center">
@@ -83,7 +79,7 @@
             </div>
           </section>
 
-     
+      -->
 
           <app-footer></app-footer>
       </main>
