--- a/src/app/members/membersmenu/membersmenu.component.html
+++ b/src/app/members/membersmenu/membersmenu.component.html
@@ -4,7 +4,9 @@
 	  <!-- Menu navigation start -->
 	  <div class="nav-container">
 		<ul class="main-menu">
-		 
+			 <li class='text-center'>
+				<img style="max-width:80% !important;padding: 10px" src="assets/img/logo.png" alt="">
+			</li>
 			<li *ngIf="perfilAsesor==true" >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/members/dashboard/asesor"><i style="font-size:20px" class="font-redlgc fa fa-user-circle-o" ></i><strong style="font-size:18px" class="special">Asesor</strong> </a>
 			</li>
@@ -26,7 +28,7 @@
 			<li >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/members/alertas/agregar"><i style="font-size:20px" class="font-redlgc fa fa-clock-o" ></i><strong style="font-size:18px" class="special">Agregar Alerta</strong> </a>
 			</li>
-			<li >
+		
       <li >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/members/settings"><i style="font-size:20px" class="font-redlgc fa fa-cogs" ></i><strong style="font-size:18px" class="special">Ajustes</strong> </a>
 			</li>
