--- a/src/app/menu/menu.component.html
+++ b/src/app/menu/menu.component.html
@@ -4,29 +4,53 @@
 	  <!-- Menu navigation start -->
 	  <div class="nav-container">
 		<ul class="main-menu">
+			<li class='text-center'>
+				<img style="max-width:80% !important;padding: 10px" src="assets/img/logo.png" alt="">
+		  	</li>
 		 	<li >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/calcular-proteccion" ><i style="font-size:20px" class="font-redlgc fa fa-calculator" ></i><strong style="font-size:18px" class="special">Calcular Proteccion</strong> </a>
-		  </li>
+		  	</li>
 			<li >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/directo"><i style="font-size:20px" class="font-redlgc fa fa-headphones" ></i><strong style="font-size:18px" class="special">LGC - Directo</strong> </a>
 			</li>
-			<li >
-				<a href="javascript:void(0);" class="font-redlgc" [(routerLink)]="ruta"><i style="font-size:20px" class="font-redlgc fa fa-shield" ></i><strong style="font-size:18px" class="special">Mis Contratos</strong> </a>
+			<li *ngIf="authenticate==false">
+					
+					<a href="javascript:void(0);" class="font-redlgc" routerLink="/login"><i style="font-size:20px" class="font-redlgc fa fa-shield" ></i><strong style="font-size:18px" class="special">Mis Contratos</strong> </a>
+					 
+				</li>
+			<li *ngIf="authenticate==true" class="active">
+				<a href="javascript:void(0);" (click)="clickMenu($event);$event.stopPropagation()" class="muestramenu font-redlgc"><i style="font-size:20px" class="font-redlgc fa fa-shield" ></i><strong style="font-size:18px" class="special">Mis Contratos</strong> <span class="fa fa-angle-up"></span></a>
+				<ul class="active" style="display:block">
+					<li *ngIf="perfilAsesor"><a href="javascript:void(0);" class="font-redlgc" routerLink="/members/dashboard/asesor" >Asesor</a></li>
+					<li *ngIf="perfilInmo"><a href="javascript:void(0);" class="font-redlgc" routerLink="/members/dashboard/inmobiliaria" >Inmobiliaria</a></li>
+					<li *ngIf="perfilPropMor"><a href="javascript:void(0);" class="font-redlgc" routerLink="/members/dashboard/propmor" >Propietario Moral</a></li>
+					<li *ngIf="perfilPropFis"><a href="javascript:void(0);" class="font-redlgc" routerLink="/members/dashboard/propfis" >Propietario Físico</a></li>
+					<li *ngIf="perfilInqMor"><a href="javascript:void(0);" class="font-redlgc" routerLink="/members/dashboard/inqmor" >Inquilino Moral</a></li>
+					<li *ngIf="perfilInqFis"><a href="javascript:void(0);" class="font-redlgc" routerLink="/members/dashboard/inqfis" >Inquilino Físico</a></li>
+				</ul>
+				<!-- <a href="javascript:void(0);" class="font-redlgc" [(routerLink)]="ruta"><i style="font-size:20px" class="font-redlgc fa fa-shield" ></i><strong style="font-size:18px" class="special">Mis Contratos</strong> </a>
+				 -->
 			</li>
 			<li >
-				<a href="javascript:void(0);" class="font-redlgc" routerLink="/proteccion-total"><i style="font-size:20px" class="font-redlgc fa fa-expeditedssl" ></i><strong style="font-size:18px" class="special">Protección Total</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/proteccion-basica"><i style="font-size:20px" class="font-redlgc fa fa-key" ></i><strong style="font-size:18px" class="special">Protección Básica</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" class="font-redlgc" routerLink="/proteccion-basica"><i style="font-size:20px" class="font-redlgc fa fa-file-text-o" ></i><strong style="font-size:18px" class="special">Protección Básica</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/proteccion-total"><i style="font-size:20px" class="font-redlgc fa fa-legal" ></i><strong style="font-size:18px" class="special">Protección Total</strong> </a>
 			</li>
 			<li >
-				<a href="javascript:void(0);" class="font-redlgc" [(routerLink)]="ruta2"><i style="font-size:20px" class="font-redlgc fa fa-edit" ></i><strong style="font-size:18px" class="special">Solicitar Contrato</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/proteccion-global"><i style="font-size:20px" class="font-redlgc fa fa-globe" ></i><strong style="font-size:18px" class="special">Protección Global</strong> </a>
 			</li>
 			<li >
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/proteccion-full"><i style="font-size:20px" class="font-redlgc fa fa-balance-scale" ></i><strong style="font-size:18px" class="special">Protección Full</strong> </a>
+			</li>
+			<li >
+				<a href="javascript:void(0);" class="font-redlgc" [(routerLink)]="ruta2"><i style="font-size:20px" class="font-redlgc fa fa-handshake-o" ></i><strong style="font-size:18px" class="special">Solicitar Contrato</strong> </a>
+			</li>
+			<!-- <li >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/credito-hipotecario"><i style="font-size:20px" class="font-redlgc fa fa-home" ></i><strong style="font-size:18px" class="special">Crédito Hipotecario</strong> </a>
-			</li>
+			</li> -->
 			<li >
-				<a href="javascript:void(0);" class="font-redlgc" routerLink="/calcular-credito"><i style="font-size:20px" class="font-redlgc fa fa-money" ></i><strong style="font-size:18px" class="special">Calcular Crédito</strong> </a>
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/calcular-credito"><i style="font-size:20px" class="font-redlgc fa fa-money" ></i><strong style="font-size:18px" class="special">Tu Hipoteca Fácil</strong> </a>
 			</li>
 			<li >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/calcular-irs"><i style="font-size:20px" class="font-redlgc fa fa-table" ></i><strong style="font-size:18px" class="special">Calcular ISR</strong> </a>
@@ -40,6 +64,16 @@
 			</li>
 			<li >
 				<a href="javascript:void(0);" class="font-redlgc" routerLink="/contacto"><i style="font-size:20px" class="font-redlgc fa fa-whatsapp" ></i><strong style="font-size:18px" class="special">Contacto</strong> </a>
+			</li>
+			<li *ngIf="authenticate==true" >
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/members/alertas/agregar"><i style="font-size:20px" class="font-redlgc fa fa-clock-o" ></i><strong style="font-size:18px" class="special">Agregar Alerta</strong> </a>
+			</li>
+		
+      		<li *ngIf="authenticate==true" >
+				<a href="javascript:void(0);" class="font-redlgc" routerLink="/members/settings"><i style="font-size:20px" class="font-redlgc fa fa-cogs" ></i><strong style="font-size:18px" class="special">Ajustes</strong> </a>
+			</li>
+			<li *ngIf="authenticate==true" >
+				<a href="javascript:void(0);" class="font-redlgc" (click)="logout()"><i style="font-size:20px" class="font-redlgc fa fa-power-off" ></i><strong style="font-size:18px" class="special">Log Out</strong> </a>
 			</li>
 		
 		 	<!--
