--- a/src/app/proteccionbasica/proteccionbasica.page.html
+++ b/src/app/proteccionbasica/proteccionbasica.page.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper ">
       
-    <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
+    <div class="wrapper-inline" >
         <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
@@ -10,23 +10,16 @@
 
           
           
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-           
          
-          </section>
-       
-        
-     
         
           <div class="form-divider"></div>
-          <div class="form-label-divider"><span>Protección Básica</span></div>
+          <div class="form-label-divider"><span class="font-redlgc">Protección Básica</span></div>
           <div class="form-divider"></div>
 
 
           <div class="news-list-item no-image">
               <div class="list-content  text-center">
-                  <h4 class="text-center font-black">SOLUCIONES</h4>
+                  <h4 class="text-center font-black font-redlgc">SOLUCIONES</h4>
                 
               </div>
               <div class="list-content">
