--- a/src/app/sugerencias/sugerencias.page.html
+++ b/src/app/sugerencias/sugerencias.page.html
@@ -2,20 +2,14 @@
 
   <div class="wrapper ">
       
-    <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
+    <div class="wrapper-inline" >
         <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
       <main class="margin mt-0">
 
           
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-           
-         
-          </section>
        
-          <div class="form-divider"></div>
      
           <section class="container">
                 <h4 class="title-main">Enviar un correo electronico. Todos los campos con * son obligatorios</h4>
