--- a/src/app/contacto/contacto.page.html
+++ b/src/app/contacto/contacto.page.html
@@ -2,23 +2,19 @@
 
   <div class="wrapper ">
       
-    <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
+    <div class="wrapper-inline" >
         <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
       <main class="margin mt-0">
 
         
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-           
          
-          </section>
-          <div class="form-divider"></div>
+         
         
      
           <div class="form-divider"></div>
-          <div class="form-label-divider"><span>Contacto</span></div>
+          <div class="form-label-divider"><span class="font-redlgc">Contacto</span></div>
           <div class="form-divider"></div>
 
 
