--- a/src/app/creditohipotecario/creditohipotecario.page.html
+++ b/src/app/creditohipotecario/creditohipotecario.page.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper ">
       
-    <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
+    <div class="wrapper-inline" >
         <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
@@ -10,17 +10,12 @@
 
          
 
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-           
-         
-          </section>
        
         
      
         
           <div class="form-divider"></div>
-          <div class="form-label-divider"><span>Asesores Hipotecarios</span></div>
+          <div class="form-label-divider"><span class="font-redlgc">Asesores Hipotecarios</span></div>
           <div class="form-divider"></div>
 
 
