--- a/src/app/members/alertas/agregaralerta/agregaralerta.page.html
+++ b/src/app/members/alertas/agregaralerta/agregaralerta.page.html
@@ -3,24 +3,18 @@
   <div class="wrapper ">
       
     <div class="wrapper-inline" >
-        <app-membersmenu></app-membersmenu>
+        <!-- <app-membersmenu></app-membersmenu> -->
+        <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
       <main class="margin mt-0">
 
         
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-           
-         
-          </section>
-       
         
-          <br>
           <section class="container">
               
                 <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back">Agregar Alerta </span></div>
+                <div class="form-label-divider"><span class="back font-redlgc">Agregar Alerta </span></div>
                 <div class="form-divider"></div>
                 
               
