--- a/src/app/members/crearsolicitud/crearsolicitud.page.html
+++ b/src/app/members/crearsolicitud/crearsolicitud.page.html
@@ -3,61 +3,60 @@
   <div class="wrapper ">
       
     <div class="wrapper-inline">
-        <app-membersmenu></app-membersmenu>
+         <!-- <app-membersmenu></app-membersmenu> -->
+         <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
       <main class="margin mt-0">
 
          
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-           
-         
-          </section>
-       
-        
-          <br>
+      
           <section class="container">
-                <div class="form-label-divider"><span class="back">Solicitud de Protección Jurídica de Arrendamiento</span></div><br><br>
+                <div class="form-label-divider"><span class="back font-redlgc">Solicitud de Protección Jurídica de Arrendamiento</span></div><br><br>
                
                 <div class="form-divider"></div>
-                <div class="form-label-divider"><span class="back">Datos del Contrato</span></div>
+                <div class="form-label-divider"><span class="back font-redlgc">Datos del Contrato</span></div>
                 <div class="form-divider"></div>
           
 				
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
                             <i class="fa fa-list-alt"></i>
-                            <select class="form-element" >
-                            <option value="">Tipo de Contrato</option>
+                            <select id="tipo_contrato_sol" class="form-element" >
+                            <option value="0">Tipo de Contrato</option>
                             <option value="1">Protección Básica</option>
                             <option value="2">Protección Total</option>
-                            <option value="3">Protección Global</option>
+                            <option value="16">Protección Global</option>
+                            <option value="26">Protección Full</option>
                           </select>
                     </div>
                     <div class="form-row no-padding">
                             <i class="fa fa-building"></i>
-                            <select class="form-element" >
-                            <option value="">Ciudad</option>
-                            <option value="1">Ciudad de México</option>
-                            <option value="2">Estado de México</option>
-                            <option value="3">Cancún</option>
-                            <option value="4">Guadalajara</option>
-                            <option value="5">Guanajuato</option>
-                            <option value="6">Hidalgo</option>
-                            <option value="7">Monterrey</option>
-                            <option value="8">Morelos</option>
-                            <option value="9">Oaxaca</option>
-                            <option value="10">Puebla</option>
-                            <option value="11">Querétaro</option>
-                            <option value="12">Torreón</option>
-                            <option value="13">Tuxtla</option>
-                            <option value="14">Otro</option>
-                          </select>
+                            <select id="ciudad_sol" class="form-element" >
+                                <option value="0">Ciudad</option>
+                                <option value="1">Ciudad de México</option>
+                                <option value="2">Estado de Mexico </option>
+                                <option value="3">Queretaro</option>
+                                <option value="4">Cancun</option>
+                                <option value="5" >Guadalajara</option>
+                                <option value="6">Monterrey</option>
+                                <option value="7">Torreon</option>
+                                <option value="8">Tuxtla Gutierrez</option>
+                                <option value="9">Puebla</option>
+                                <option value="10">Acapulco</option>
+                                <option value="11">Oaxaca</option>
+                                <option value="12">San Miguel De Allende</option>
+                                <option value="13">Pachuca</option>
+                                <option value="14">Cuernavaca</option>
+                                <option value="15">Metepec</option>
+                                <option value="16">Tijuana</option>
+                                <option value="17">San Luis Potosí</option>
+                                <option value="18">León</option>
+                            </select>
                     </div>
                     <div class="form-row no-padding">
                         <i class="fa fa-money"></i>
-                        <input type="text" id="monto_renta" name="monto_renta" class="form-element" required placeholder="Monto de Renta (Opcional)" value="">
+                        <input type="text" id="monto_renta_sol" name="monto_renta" class="form-element" required placeholder="Monto de Renta (Opcional)" value="">
                     </div>
                 </div>
                 <h4 class="title-main font-16 font-bold ">Fecha Probable de Firma</h4>
@@ -65,7 +64,7 @@
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
                         <i class="fa fa-calendar"></i>
-                        <input type="date" id="fecha_probable" name="fecha_probable" class="form-element" required placeholder="Fecha Probable de Firma (Opcional)" value="">
+                        <input type="date" id="fecha_probable_sol" name="fecha_probable" class="form-element" required placeholder="Fecha Probable de Firma (Opcional)" value="">
                     </div>
                 </div>
                
@@ -75,16 +74,16 @@
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
                         <i class="fa fa-user"></i>
-                        <input type="text" id="nombre_contacto" name="nombre_contacto" class="form-element" required placeholder="Nombre" value="">
+                        <input type="text" id="nombre_contacto_sol" name="nombre_contacto" class="form-element" required placeholder="Nombre" value="">
                     </div>
                     
                     <div class="form-row no-padding">
                         <i class="fa fa-phone"></i>
-                        <input type="text" id="telefono_contacto" name="telefono_contacto" class="form-element" required placeholder="Teléfono" value="">
+                        <input type="text" id="telefono_contacto_sol" name="telefono_contacto" class="form-element" required placeholder="Teléfono" value="">
                     </div>
                     <div class="form-row no-padding">
                        <i class="fa fa-envelope"></i>
-                        <input type="text" id="email_contacto" name="email_contacto" class="form-element" required placeholder="Email" value="">
+                        <input type="text" id="email_contacto_sol" name="email_contacto" class="form-element" required placeholder="Email" value="">
                     </div>
                 </div>
                 <div class="form-divider"></div>
@@ -92,16 +91,23 @@
                 <div class="form-divider"></div>
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
+                        <i class="fa fa-hand-o-right"></i>
+                        <select id="tipo_arrendador_sol" class="form-element" >
+                            <option value="1">Físico</option>
+                            <option value="2">Moral</option>
+                        </select>
+                    </div>
+                    <div class="form-row no-padding">
                         <i class="fa fa-user"></i>
-                        <input type="text" id="nombre_arrendador" name="nombre_arrendador" class="form-element" required placeholder="Nombre" value="">
+                        <input type="text" id="nombre_arrendador_sol" name="nombre_arrendador" class="form-element" required placeholder="Nombre" value="">
                     </div>
                     <div class="form-row no-padding">
                         <i class="fa fa-phone"></i>
-                        <input type="text" id="telefono_arrendador" name="telefono_arrendador" class="form-element" required placeholder="Teléfono" value="">
+                        <input type="text" id="telefono_arrendador_sol" name="telefono_arrendador" class="form-element" required placeholder="Teléfono" value="">
                     </div>
                     <div class="form-row no-padding">
                         <i class="fa fa-envelope"></i>
-                        <input type="text" id="email_arrendador" name="email_arrendador" class="form-element" required placeholder="Email" value="">
+                        <input type="text" id="email_arrendador_sol" name="email_arrendador" class="form-element" required placeholder="Email" value="">
                     </div>   
                 </div>
                 <div class="form-divider"></div>
@@ -109,16 +115,23 @@
                 <div class="form-divider"></div>
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
+                        <i class="fa fa-hand-o-right"></i>
+                        <select id="tipo_inquilino_sol" class="form-element" >
+                            <option value="1">Físico</option>
+                            <option value="2">Moral</option>
+                        </select>
+                    </div>
+                    <div class="form-row no-padding">
                         <i class="fa fa-user"></i>
-                        <input type="text" id="nombre_inquilino" name="nombre_inquilino" class="form-element" required placeholder="Nombre" value="">
+                        <input type="text" id="nombre_inquilino_sol" name="nombre_inquilino" class="form-element" required placeholder="Nombre" value="">
                     </div>
                     <div class="form-row no-padding">
                         <i class="fa fa-phone"></i>
-                        <input type="text" id="telefono_inquilino" name="telefono_inquilino" class="form-element" required placeholder="Teléfono" value="">
+                        <input type="text" id="telefono_inquilino_sol" name="telefono_inquilino" class="form-element" required placeholder="Teléfono" value="">
                     </div>
                     <div class="form-row no-padding">
                         <i class="fa fa-envelope"></i>
-                        <input type="text" id="email_inquilino" name="email_inquilino" class="form-element" required placeholder="Email" value="">
+                        <input type="text" id="email_inquilino_sol" name="email_inquilino" class="form-element" required placeholder="Email" value="">
                     </div>
                 </div>
                 <div class="form-divider"></div>
@@ -126,16 +139,23 @@
                 <div class="form-divider"></div>
                 <div class="form-row-group with-icons">
                     <div class="form-row no-padding">
+                        <i class="fa fa-hand-o-right"></i>
+                        <select id="tipo_garante_sol" class="form-element" >
+                            <option value="1">Físico</option>
+                            <option value="2">Moral</option>
+                        </select>
+                    </div>
+                    <div class="form-row no-padding">
                         <i class="fa fa-user"></i>
-                        <input type="text" id="nombre_garante" name="nombre_garante" class="form-element" required placeholder="Nombre" value="">
+                        <input type="text" id="nombre_garante_sol" name="nombre_garante" class="form-element" required placeholder="Nombre" value="">
                     </div>
                     <div class="form-row no-padding">
                         <i class="fa fa-phone"></i>
-                        <input type="text" id="telefono_garante" name="telefono_garante" class="form-element" required placeholder="Teléfono" value="">
+                        <input type="text" id="telefono_garante_sol" name="telefono_garante" class="form-element" required placeholder="Teléfono" value="">
                     </div>
                     <div class="form-row no-padding">
                         <i class="fa fa-envelope"></i>
-                        <input type="text" id="email_garante" name="email_garante" class="form-element" required placeholder="Email" value="">
+                        <input type="text" id="email_garante_sol" name="email_garante" class="form-element" required placeholder="Email" value="">
                     </div>
                 </div>
                 <div class="form-divider"></div>
@@ -143,8 +163,8 @@
                 <div class="form-divider"></div>
             	<div class="form-row-group ">
                     <div class="form-row no-padding">
-                        <label class="form-element"><input type="radio" name="gender" /> Aval</label>
-                        <label class="form-element"><input type="radio" name="gender" /> Obligado Solidario</label>
+                        <label class="form-element"><input type="radio" name="aval" value="1"/> Aval</label>
+                        <label class="form-element"><input type="radio" name="aval" value="2"/> Obligado Solidario</label>
                     </div>
                 </div>
 
@@ -154,11 +174,11 @@
             	<div class="form-row-group with-icons">
                     <div class="form-row no-padding">
                             <i class="fa fa-align-justify"></i>
-                            <input type="text" id="descripcion_escritura" name="descripcion_escritura" class="form-element" required placeholder="Descripción" value="">
+                            <input type="text" id="descripcion_escritura_sol" name="descripcion_escritura_sol" class="form-element" required placeholder="Descripción" value="">
                     </div>
                     <div class="form-row no-padding">
                             <i class="fa fa-file"></i>
-                            <input type="file" id="escritura" name="escritura" class="form-element" >
+                            <input type="file" id="escritura_sol" name="escritura_sol" class="form-element" >
                     </div>
                 </div>
 
