--- a/src/app/noticias/noticias.component.html
+++ b/src/app/noticias/noticias.component.html
@@ -5,17 +5,21 @@
         <h4 class="font-bold font-redlgc text-center">Noticias <a target="_blank" href="https://mundoinmobiliario.tv">Mundoinmobiliario.tv</a> </h4>
         <div class="form-divider"></div>
 
-        <div *ngFor="let noticia of noticias">
-          <div class="news-list-item" routerLink="{{noticia.url}}" >
-            <div class="list-image">
-              <img  src="{{noticia.image}}" alt="" width="100" height="100">
+        <div *ngFor="let noticia of noticias" class="">
+          <div class="news-list-item bordesRedondeados20" routerLink="{{noticia.url}}" >
+            <div class="list-image ">
+              <img class='leftbordeRedondeado20' src="{{noticia.image}}?v=1.1" alt="" width="100" height="100">
             </div>
             <div class="list-content">
               <span class="list-category {{noticia.color}}">{{noticia.etiqueta}}</span>
               <h2 class="list-title"><a href="javascript:void(0)" routerLink="{{noticia.url}}">{{noticia.titulo}}</a></h2>
-              <a href="javascript:void(0)" class="list-author">{{noticia.autor}}</a> - <span class="list-time">{{noticia.fecha}}</span>
+              <!-- <a href="javascript:void(0)" class="list-author">{{noticia.autor}}</a> - --> <div class="form-mini-divider" ></div>
+               <span class="list-time" style="float:right">{{noticia.fecha}}</span>
+              
+          
             </div>
           </div>
+          
           <div class="form-mini-divider" ></div>
         </div>
 
