--- a/src/app/notifications/notifications.component.html
+++ b/src/app/notifications/notifications.component.html
@@ -13,8 +13,15 @@
   <div *ngIf="!bell" class="search-button" data-search="open">
     <img src="assets/img/content/notification1.png" class="not-icon1" alt="">
     <img src="assets/img/content/notification2.png" class="not-icon2" alt="">
+    
   </div>
-
+  <div *ngIf="!bell&&lugar!='home'" class="search-button" >
+   -
+  </div>
+  <div *ngIf="!bell&&lugar!='home'" class="search-button" >
+      <img src="assets/img/content/alarm1.png" [(routerLink)]="urlAlertas" class="not-icon1" alt="">
+      <img src="assets/img/content/alarm2.png" [(routerLink)]="urlAlertas" class="not-icon2" alt="">
+  </div>
   <div class="navi-menu-button" (click)="onClk($event)">
     <em></em>
     <em></em>
@@ -33,76 +40,30 @@
     </div>
   </form>
     <ul class="notification-list list-unstyled">
-    <li>
-      <div class="d-flex align-items-center justify-content-between">
-                    <div class="d-flex align-items-center">
-                      <div class="">
-                        <h5 class="coin-name">You have 3 notifications {{bell}} </h5>
-                      </div>
-                    </div>
-                    <div>
-                      <a href=""><small class="text-muted d-block">mark all as read</small></a>
-                    </div>
-                  </div>
+   
+    <li class="sombra-baja" *ngFor="let notificacion of notificaciones" routerLink="/notificacion/{{notificacion.id}}">
+   
+        <div class="d-flex align-items-center justify-content-between" >
+          <div class="d-flex align-items-center">
+            
+            <div class="ml-10">
+              <h4 class="font-16 font-redlgc font-bold">{{notificacion.title}}</h4>
+              <div class="form-mini-divider"></div>
+              <span  class="font-14 ">{{notificacion.body}}</span>
+            </div>
+          </div>
+        
+        </div>
+      <small style="float:right" class="font-redlgc font-10">{{notificacion.fecha}}</small>
+      <div  class="form-mini-divider"></div>
     </li>
-    <li>
+
+    <li class="sombra-baja" >
       <div class="d-flex align-items-center justify-content-between">
-                      <div class="d-flex align-items-center">
-                        <div class="notice-icon available">
-                            <i class="fa fa-check"></i>
-                        </div>
-                        <div class="ml-10">
-                          <h4 class="coin-name">Successful transaction 0.01 BTC</h4>
-                          <small class="text-muted">15 min ago</small>
-                        </div>
-                      </div>
-                  </div>
-    </li>
-    <li>
-      <div class="d-flex align-items-center justify-content-between">
-                      <div class="d-flex align-items-center">
-                        <div class="notice-icon away">
-                            <i class="fa fa-clock-o"></i>
-                        </div>
-                        <div class="ml-10">
-                          <h4 class="coin-name">4 of Pending Transactions!</h4>
-                          <small class="text-muted"> 12 hours ago</small>
-                        </div>
-                      </div>
-                  </div>
-    </li>
-    <li>
-      <div class="d-flex align-items-center justify-content-between">
-                      <div class="d-flex align-items-center">
-                        <div class="notice-icon busy">
-                            <i class="fa fa-times"></i>
-                        </div>
-                        <div class="ml-10">
-                          <h4 class="coin-name">Cancelled Order of 200 ICO</h4>
-                          <small class="text-muted">15 Feb - 08:34</small>
-                        </div>
-                      </div>
-                  </div>
-    </li>
-    <li>
-      <div class="d-flex align-items-center justify-content-between">
-                      <div class="d-flex align-items-center">
-                        <div class="notice-icon available">
-                            <i class="fa fa-check"></i>
-                        </div>
-                        <div class="ml-10">
-                          <h4 class="coin-name">Great Speed Notify of 1.34 LTC</h4>
-                          <small class="text-muted">24 jan - 20:43</small>
-                        </div>
-                      </div>
-                  </div>
-    </li>
-    <li>
-      <div class="d-flex align-items-center justify-content-between">
-                      <div class="d-flex align-items-center">
-                        <a href="" class="text-muted">Read all notifications</a>
-                      </div>
-                  </div>
+          <div class="d-flex align-items-center">
+            <a href="javascript:void(0)" routerLink="/notificaciones" class="text-muted">Leer todas las notificaciones</a>
+          </div>
+      </div>
     </li>
     
   </ul>
