--- a/src/app/pagina/pagina.page.html
+++ b/src/app/pagina/pagina.page.html
@@ -2,7 +2,7 @@
 
   <div class="wrapper ">
       
-    <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
+    <div class="wrapper-inline" >
         <app-menu></app-menu>
         <app-quickmenu title="{{title}}"></app-quickmenu>
       <!-- Page content start -->
@@ -15,12 +15,8 @@
             </div>
           </div> -->
           <div class="form-divider"></div>
-          <div class="form-divider"></div>
-          <div class="form-divider"></div>
-          <section class="bal-section container">
-              <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
-          </section>
-          <div class="form-divider"></div>
+         
+         
           <div class="news-list-item no-image">
               <div class="list-content  text-center">
                   <h4 class="text-center font-black"  [innerHTML]="titulo"></h4>
