--- a/src/app/protecciontotal/protecciontotal.page.html
+++ b/src/app/protecciontotal/protecciontotal.page.html
@@ -2,27 +2,22 @@
 
   <div class="wrapper ">
       
-      <div class="wrapper-inline" (scroll)="doSomethingOnScroll($event)">
+      <div class="wrapper-inline" >
           <app-menu></app-menu>
           <app-quickmenu title="{{title}}"></app-quickmenu>
         <!-- Page content start -->
         <main class="margin mt-0">
   
            
-            <section class="bal-section container">
-                <div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div>
            
-            </section>
-         
-          
             <div class="form-divider"></div>
-            <div class="form-label-divider"><span>Protección Total</span></div>
+            <div class="form-label-divider"><span class="font-redlgc">Protección Total</span></div>
             <div class="form-divider"></div>
 
 
             <div class="news-list-item no-image">
                 <div class="list-content  text-center">
-                    <h4 class="text-center font-black">SOLUCIONES</h4>
+                    <h4 class="text-center font-black font-redlgc">SOLUCIONES</h4>
                   
                 </div>
                 <div class="list-content">
