--- a/src/app/public/login/login.page.html
+++ b/src/app/public/login/login.page.html
@@ -14,14 +14,30 @@
                
               </div>
             </div>
-            <div class="form-divider"></div>
+         
             <section class="bal-section container">
-								<div style="margin:auto" align="center"> <img src="assets/img/logo.png" alt=""></div><br>
-             
-           
-            </section>
-          
-          	<section class="bal-section container">
+            
+              <!-- <img style="width: 100%;" class="bordesInferioresRedondeados" src="assets/img/magnoevento.png" alt=""> -->
+               <swiper [config]="config">
+                   <div class="swiper-wrapper">
+                       <div class="swiper-slide">
+                       <img src="{{slider1}}" />
+                       </div>
+                       <div class="swiper-slide">
+                       <img src="{{slider2}}" />
+                       </div>
+                       <div class="swiper-slide">
+                       <img src="{{slider3}}" />
+                       </div>
+                   
+                   </div>
+                   <!-- Add Pagination 
+                   <div class="swiper-pagination"></div>
+                   Add Arrows -->
+                
+               </swiper>
+           </section>
+          	<section class="container">
 					
 							
 								<div class="form-divider"></div>
@@ -40,12 +56,12 @@
 						
               
              
+             
                 <div class="form-divider"></div>
-                <div class="form-divider"></div>
-                <div class="form-row"  style="text-align: center">
-            
-                    <a style="text-align: center" href="Javascript:void(0);" (click)="login()" class="button circle inline green">Iniciar Sesion</a>
+                <div class="form-row">
+                    <a style="text-align: center;background: linear-gradient(36deg, rgba(88,17,15,1) 0%, rgba(150,16,13,1) 59%, rgba(150,16,13,1) 100%);color:white" href="Javascript:void(0);"  (click)="login()" class="button circle block">Iniciar Sesión</a>
                 </div>
+              
 			
             
             </section><br>
