--- a/src/assets/css/global.style.css
+++ b/src/assets/css/global.style.css
@@ -239,9 +239,9 @@ nav.menu ul.main-menu>li>a{
 	font-weight: normal;
 }
 
-nav.menu ul.main-menu > li.active i{
+/* nav.menu ul.main-menu > li.active i{
 	color: #2eb18d !important;
-}
+} */
 
 nav.menu ul.main-menu>li>a>i{
 	display: inline-block;
@@ -3368,6 +3368,16 @@ footer ul li a i {
 .font-20{
 	font-size: 20px !important;
 }
+.font-12{
+	font-size: 12px !important;
+}
+.font-10{
+
+	font-size: 10px !important;
+}
+.font-8{
+	font-size: 8px !important;
+}
 .font-14{
 	font-size: 14px !important;
 }
@@ -3450,4 +3460,37 @@ footer ul li a i {
 .info-box .contact-item i{
 	display: inline-block;
 	width: 20px;
+}
+
+.sombra-baja {
+	-webkit-box-shadow: 0px 10px 13px -2px rgba(0,0,0,0.31);
+	-moz-box-shadow: 0px 10px 13px -2px rgba(0,0,0,0.31);
+	box-shadow: 0px 10px 13px -2px rgba(0,0,0,0.31);
+}
+
+.bordesRedondeados {
+	border-radius: 30px 30px 30px 30px;
+	-moz-border-radius: 30px 30px 30px 30px;
+	-webkit-border-radius: 30px 30px 30px 30px;
+	
+}
+
+.leftbordeRedondeado {
+	border-radius: 30px 0px 0px 30px;
+	-moz-border-radius: 30px 0px 0px 30px;
+	-webkit-border-radius: 30px 0px 0px 30px;
+
+}
+.bordesRedondeados20 {
+	border-radius: 20px 20px 20px 20px;
+	-moz-border-radius: 20px 20px 20px 20px;
+	-webkit-border-radius: 20px 20px 20px 20px;
+	
+}
+
+.leftbordeRedondeado20 {
+	border-radius: 20px 0px 0px 20px;
+	-moz-border-radius: 20px 0px 0px 20px;
+	-webkit-border-radius: 20px 0px 0px 20px;
+
 }
